--- a/index.html
+++ b/index.html
@@ -12,28 +12,26 @@
     crossorigin="anonymous"
     referrerpolicy="no-referrer"
   />
+  <!-- your responsive style.css -->
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Inject header -->
+  <!-- Injected header -->
   <div id="include-header"></div>
 
   <!-- Quiz App -->
   <div class="app">
     <h1>Indian Railway Manuals Quiz</h1>
-
-    <div id="quizContainer">
-      <div class="quiz-list" id="quizList">
-        <button class="manual-btn" data-manual="irwm">1. Indian Railway Works Manual</button>
-        <button class="manual-btn" data-manual="irpwm">2. Indian Railway P-way Manual</button>
-        <button class="manual-btn" data-manual="irdim">3. Indian Railway Schedule of Dimensions</button>
-        <button class="manual-btn" data-manual="irec">4. Indian Railway Engineering Code</button>
-        <button class="manual-btn" data-manual="stm">5. Small Track Machine Manual</button>
-        <button class="manual-btn" data-manual="usfd">6. USFD Manual</button>
-        <button class="manual-btn" data-manual="fbwm">7. FBW Manual</button>
-        <button class="manual-btn" data-manual="store">8. Store Manual</button>
-        <button class="manual-btn" data-manual="account">9. Account Manual</button>
-      </div>
+    <div class="quiz-list" id="quizList">
+      <button class="manual-btn" data-manual="irwm">1. Indian Railway Works Manual</button>
+      <button class="manual-btn" data-manual="irpwm">2. Indian Railway P-way Manual</button>
+      <button class="manual-btn" data-manual="irdim">3. Indian Railway Schedule of Dimensions</button>
+      <button class="manual-btn" data-manual="irec">4. Indian Railway Engineering Code</button>
+      <button class="manual-btn" data-manual="stm">5. Small Track Machine Manual</button>
+      <button class="manual-btn" data-manual="usfd">6. USFD Manual</button>
+      <button class="manual-btn" data-manual="fbwm">7. FBW Manual</button>
+      <button class="manual-btn" data-manual="store">8. Store Manual</button>
+      <button class="manual-btn" data-manual="account">9. Account Manual</button>
     </div>
   </div>
 
@@ -42,15 +40,14 @@
   <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js"></script>
 
   <script>
-    let currentUser = null;
-
+    // 1) Inject header.html
     async function includeHeader() {
       const resp = await fetch('header.html');
       document.getElementById('include-header').innerHTML = await resp.text();
     }
 
+    // 2) Initialize Firebase & wire up everything
     function initApp() {
-      // Firebase init
       firebase.initializeApp({
         apiKey: "AIzaSyCRhKq7k4v2MdiE5xT4H7-Yb7SLQ5mvTn8",
         authDomain: "quiz-app-1b48b.firebaseapp.com",
@@ -58,43 +55,47 @@
         storageBucket: "quiz-app-1b48b.appspot.com",
         messagingSenderId: "765334603137",
         appId: "1:765334603137:web:1c8a13f6086a6773c2d480",
-        measurementId: "G-YQJWJ12N7"
+        measurementId: "G-YQJQWJ12N7"
       });
 
-      const logoutBtn   = document.getElementById('logoutButton');
-      const loginLink   = document.getElementById('loginLink');
-      const registerLink= document.getElementById('registerLink');
+      const logoutBtn    = document.getElementById('logoutButton');
+      const loginLink    = document.getElementById('loginLink');
+      const registerLink = document.getElementById('registerLink');
 
+      // 3) Show/hide login/logout
       firebase.auth().onAuthStateChanged(user => {
-        currentUser = user;
         if (user) {
-          logoutBtn.style.display = 'inline-block';
-          loginLink.style.display = 'none';
+          logoutBtn.style.display    = 'inline-block';
+          loginLink.style.display    = 'none';
           registerLink.style.display = 'none';
         } else {
-          logoutBtn.style.display = 'none';
-          loginLink.style.display = 'inline-block';
+          logoutBtn.style.display    = 'none';
+          loginLink.style.display    = 'inline-block';
           registerLink.style.display = 'inline-block';
         }
       });
 
-      logoutBtn.addEventListener('click', () => {
-        firebase.auth().signOut().then(() => location.reload());
-      });
+      // 4) Logout action
+      logoutBtn.addEventListener('click', () =>
+        firebase.auth().signOut().then(() => location.reload())
+      );
 
-      // Quiz button handlers
+      // 5) Quiz-button click always checks currentUser *at click time*
       document.querySelectorAll('.manual-btn').forEach(btn => {
         btn.addEventListener('click', () => {
-          if (currentUser) {
+          const user = firebase.auth().currentUser;
+          if (user) {
+            // go to the chosen quiz
             window.location.href = `quiz.html?manual=${btn.dataset.manual}`;
           } else {
+            // force login
             window.location.href = 'login.html';
           }
         });
       });
     }
 
-    // Load header then init app
+    // 6) Load header then init
     includeHeader().then(initApp);
   </script>
 </body>
