--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     crossorigin="anonymous"
     referrerpolicy="no-referrer"
   />
-  <!-- your responsive style.css -->
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -35,19 +34,20 @@
     </div>
   </div>
 
-  <!-- Firebase SDKs -->
-  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js"></script>
+  <!-- Firebase “compat” SDKs to expose the old firebase.* globals -->
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
 
   <script>
-    // 1) Inject header.html
+    // 1) Load and inject header.html
     async function includeHeader() {
       const resp = await fetch('header.html');
       document.getElementById('include-header').innerHTML = await resp.text();
     }
 
-    // 2) Initialize Firebase & wire up everything
+    // 2) Initialize Firebase & wire everything up
     function initApp() {
+      // Restore your existing namespaced API
       firebase.initializeApp({
         apiKey: "AIzaSyCRhKq7k4v2MdiE5xT4H7-Yb7SLQ5mvTn8",
         authDomain: "quiz-app-1b48b.firebaseapp.com",
@@ -62,7 +62,7 @@
       const loginLink    = document.getElementById('loginLink');
       const registerLink = document.getElementById('registerLink');
 
-      // 3) Show/hide login/logout
+      // 3) Toggle header links on auth change
       firebase.auth().onAuthStateChanged(user => {
         if (user) {
           logoutBtn.style.display    = 'inline-block';
@@ -75,27 +75,25 @@
         }
       });
 
-      // 4) Logout action
+      // 4) Logout handler
       logoutBtn.addEventListener('click', () =>
         firebase.auth().signOut().then(() => location.reload())
       );
 
-      // 5) Quiz-button click always checks currentUser *at click time*
+      // 5) Quiz button click → check real‐time auth then redirect
       document.querySelectorAll('.manual-btn').forEach(btn => {
         btn.addEventListener('click', () => {
           const user = firebase.auth().currentUser;
           if (user) {
-            // go to the chosen quiz
             window.location.href = `quiz.html?manual=${btn.dataset.manual}`;
           } else {
-            // force login
             window.location.href = 'login.html';
           }
         });
       });
     }
 
-    // 6) Load header then init
+    // 6) Kick it off: inject header, then init app
     includeHeader().then(initApp);
   </script>
 </body>
