--- a/register.html
+++ b/register.html
@@ -3,266 +3,86 @@
 <head>
   <meta charset="UTF-8">
   <title>Register</title>
-  <style>
-    body {
-      background: #fafafa;
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      justify-content: center;
-    }
-    .container {
-      width: 400px;
-      margin: 40px auto;
-      background: #fff;
-      border-radius: 8px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-      padding: 32px 24px 24px 24px;
-    }
-    h2 {
-      text-align: center;
-      margin-top: 0;
-      margin-bottom: 8px;
-      font-size: 28px;
-      font-weight: 600;
-    }
-    .subtitle {
-      text-align: center;
-      color: #555;
-      margin-bottom: 24px;
-      font-size: 15px;
-    }
-    .social-btn {
-      width: 100%;
-      padding: 12px;
-      margin-bottom: 12px;
-      border: 1px solid #ddd;
-      border-radius: 4px;
-      background: #fff;
-      font-size: 14px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      cursor: pointer;
-      font-weight: 600;
-    }
-    .social-btn img, .social-btn svg {
-      height: 20px;
-      margin-right: 10px;
-    }
-    .small-note {
-      text-align: center;
-      font-size: 14px;
-      margin: 8px 0 16px 0;
-    }
-    .divider {
-      display: flex;
-      align-items: center;
-      text-align: center;
-      margin: 20px 0;
-      color: #777;
-    }
-    .divider::before, .divider::after {
-      content: '';
-      flex: 1;
-      border-bottom: 1px solid #ddd;
-    }
-    .divider:not(:empty)::before {
-      margin-right: 16px;
-    }
-    .divider:not(:empty)::after {
-      margin-left: 16px;
-    }
-    form {
-      display: flex;
-      flex-direction: column;
-    }
-    label {
-      font-size: 14px;
-      margin-bottom: 6px;
-      font-weight: 600;
-    }
-    input[type="email"], input[type="text"], input[type="password"] {
-      padding: 12px;
-      margin-bottom: 16px;
-      border: 1px solid #ddd;
-      border-radius: 4px;
-      font-size: 14px;
-      background: #f0f0f0;
-    }
-    .checkbox-row {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      margin-bottom: 16px;
-    }
-    .stay-signed {
-      display: flex;
-      align-items: center;
-    }
-    .checkbox-row input[type="checkbox"] {
-      margin-right: 6px;
-    }
-    .forgot {
-      color: #000;
-      text-decoration: none;
-      font-weight: 600;
-      font-size: 14px;
-    }
-    .forgot:hover {
-      text-decoration: underline;
-    }
-    .required-note {
-      font-size: 13px;
-      color: #888;
-      text-align: right;
-      margin-bottom: 16px;
-    }
-    .actions-row {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-    }
-    .login-btn {
-      background: #f9a825;
-      color: #fff;
-      border: none;
-      padding: 10px 24px;
-      border-radius: 4px;
-      font-size: 14px;
-      font-weight: 600;
-      cursor: pointer;
-    }
-    .join-btn {
-      background: none;
-      border: none;
-      color: #000;
-      font-size: 14px;
-      font-weight: 600;
-      cursor: pointer;
-      padding: 0;
-    }
-    .modal {
-      display: none;
-      position: fixed;
-      z-index: 1000;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0,0,0,0.5);
-    }
-    .modal-content {
-      background-color: white;
-      margin: 15% auto;
-      padding: 20px;
-      width: 350px;
-      border-radius: 8px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.15);
-    }
-    .modal h3 {
-      margin-top: 0;
-      margin-bottom: 16px;
-    }
-  </style>
-  <script src="https://accounts.google.com/gsi/client" async defer></script>
+  <!-- Your CSS… -->
+  <style>/* …existing styles… */</style>
+
+  <!-- Firebase “compat” SDKs -->
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
 </head>
 <body>
   <div class="container">
     <h2>Register</h2>
-    <div class="subtitle">By continuing you agree to our <b>Community Guidelines</b></div>
+    <!-- …social buttons… -->
 
-    <!-- Google Button -->
-    <div id="g_id_onload"
-         data-client_id="765334603137-e10kbh7ifqm6fhkelapt7qjdo00vmcuh.apps.googleusercontent.com"
-         data-callback="handleCredentialResponse"
-         data-auto_prompt="false">
-    </div>
-    <div class="g_id_signin"
-         data-type="standard"
-         data-shape="rectangular"
-         data-theme="outline"
-         data-text="continue_with"
-         data-size="large"
-         data-logo_alignment="left">
-    </div>
-
-    <!-- Apple Button (non-functional) -->
-    <button class="social-btn" type="button" disabled>
-      <svg viewBox="0 0 384 512" width="20" height="20"><path fill="currentColor" d="M318.7 268.7c-.2-36.7 16.4-64.4 50-84.8-18.8-26.9-47.2-41.7-84.7-44.6-35.5-2.8-74.3 20.7-88.5 20.7-15 0-49.4-19.7-76.4-19.7C63.3 141.2 4 184.8 4 273.5q0 39.3 14.4 81.2c12.8 36.7 59 126.7 107.2 125.2 25.2-.6 43-17.9 75.8-17.9 31.8 0 48.3 17.9 76.4 17.9 48.6-.7 90.4-82.5 102.6-119.3-65.2-30.7-61.7-90-61.7-91.9zm-56.6-164.2c27.3-32.4 24.8-61.9 24-72.5-24.1 1.4-52 16.4-67.9 34.9-17.5 19.8-27.8 44.3-25.6 71.9 26.1 2 49.9-11.4 69.5-34.3z"/></svg>
-      CONTINUE WITH APPLE
-    </button>
-  
-    <div class="divider">or</div>
     <form id="registerForm">
-      <label for="email">Email Address<span style="color:#f9a825">*</span></label>
+      <label for="email">Email Address<span>*</span></label>
       <input type="email" id="email" required>
-      <label for="username">Username<span style="color:#f9a825">*</span></label>
+
+      <label for="username">Username<span>*</span></label>
       <input type="text" id="username" required>
-      <label for="password">Password<span style="color:#f9a825">*</span></label>
+
+      <label for="password">Password<span>*</span></label>
       <input type="password" id="password" required>
-      <div class="checkbox-row">
-        <div class="stay-signed">
-          <input type="checkbox" id="staySignedIn" checked>
-          <label for="staySignedIn" style="margin:0;font-weight:normal;">Stay signed in</label>
-        </div>
-        <a class="forgot" href="#">Forgot Password?</a>
-      </div>
-      <div class="required-note">* indicates a required field</div>
+
+      <!-- …other fields… -->
+
       <div class="actions-row">
-        <button type="button" class="join-btn" onclick="window.location.href='login.html'">Already have an account? Log In</button>
+        <button type="button" class="join-btn"
+                onclick="window.location.href='login.html'">
+          Already have an account? Log In
+        </button>
         <button type="submit" class="login-btn">REGISTER</button>
       </div>
     </form>
   </div>
 
-  <!-- Username Modal -->
-  <div id="usernameModal" class="modal">
-    <div class="modal-content">
-      <h3>Choose a Username</h3>
-      <form id="usernameForm">
-        <input type="text" id="modalUsername" placeholder="Username*" required>
-        <p class="small-note">This username will be visible to other users</p>
-        <button type="submit" class="login-btn" style="width:100%">SAVE USERNAME</button>
-      </form>
-    </div>
-  </div>
-
+  <!-- Firebase + Registration Logic -->
   <script>
-    let googleEmail = "";
-    // Google Sign-In Handler
-    function handleCredentialResponse(response) {
-      const responsePayload = parseJwt(response.credential);
-      googleEmail = responsePayload.email;
-      const suggestedUsername = googleEmail.split('@')[0];
-      document.getElementById('modalUsername').value = suggestedUsername;
-      document.getElementById('usernameModal').style.display = 'block';
-    }
-    function parseJwt(token) {
-      const base64Url = token.split('.')[1];
-      const base64 = base64Url.replace(/-/g, '+').replace(/_/g, '/');
-      const jsonPayload = decodeURIComponent(atob(base64).split('').map(function(c) {
-        return '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2);
-      }).join(''));
-      return JSON.parse(jsonPayload);
-    }
-    document.getElementById('usernameForm').addEventListener('submit', function(e) {
-      e.preventDefault();
-      const username = document.getElementById('modalUsername').value;
-      localStorage.setItem('username', username);
-      localStorage.setItem('email', googleEmail);
-      document.getElementById('usernameModal').style.display = 'none';
-      window.location.href = 'dashboard.html';
-    });
-    document.getElementById('registerForm').addEventListener('submit', function(e) {
-      e.preventDefault();
-      const username = document.getElementById('username').value;
-      const email = document.getElementById('email').value;
-      localStorage.setItem('username', username);
-      localStorage.setItem('email', email);
-      window.location.href = 'dashboard.html';
-    });
+    // 1. Your Firebase config
+    const firebaseConfig = {
+      apiKey: "AIzaSy…",
+      authDomain: "quiz-app-1b48b.firebaseapp.com",
+      projectId: "quiz-app-1b48b",
+      // …other keys…
+    };
+    // 2. Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    const auth = firebase.auth();
+
+    // 3. Hook up your registration form
+    document.getElementById('registerForm')
+      .addEventListener('submit', async function(e) {
+        e.preventDefault();
+
+        // Collect form values
+        const email    = document.getElementById('email').value;
+        const password = document.getElementById('password').value;
+        const username = document.getElementById('username').value;
+
+        try {
+          // 4. Create user with email & password
+          const userCred = await auth
+            .createUserWithEmailAndPassword(email, password);
+
+          // 5. Optional: save extra profile data (username) in Firestore/Database here
+
+          // 6. Send verification email
+          await userCred.user.sendEmailVerification({
+            // You can omit this object or customize action URL
+            url: 'https://your-domain.com/login.html'
+          });
+
+          // 7. Notify user and redirect to login
+          alert(`A verification link has been sent to ${email}. Please check your inbox.`);
+          window.location.href = 'login.html';
+
+        } catch (err) {
+          // 8. Handle errors (show on page or alert)
+          console.error(err);
+          alert(err.message);
+        }
+      });
   </script>
 </body>
 </html>
