--- a/register.html
+++ b/register.html
@@ -41,7 +41,7 @@
   <script>
     // 1. Your Firebase config
     const firebaseConfig = {
-      apiKey: "AIzaSy…",
+      apiKey: "AIzaSyCRhKq7k4v2MdiE5xT4H7-Yb7SLQ5mvTn8",
       authDomain: "quiz-app-1b48b.firebaseapp.com",
       projectId: "quiz-app-1b48b",
       // …other keys…
