--- a/register.html
+++ b/register.html
@@ -1,86 +1,256 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Register</title>
-  <!-- Your CSS… -->
-  <style>/* …existing styles… */</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Register – IR-LDCE Quiz</title>
 
-  <!-- Firebase “compat” SDKs -->
+  <!-- Font Awesome for the Apple icon -->
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+
+  <!-- Firebase compat SDKs -->
   <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
+
+  <style>
+    * { box-sizing: border-box; margin: 0; padding: 0;}
+    body {
+      font-family: Arial, sans-serif;
+      background: #f5f5f5;
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      min-height: 100vh;
+      padding: 40px 0;
+    }
+    .register-container {
+      background: #fff;
+      width: 100%;
+      max-width: 400px;
+      padding: 30px;
+      border-radius: 8px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+    .register-container h1 {
+      text-align: center;
+      margin-bottom: 8px;
+      color: #003366;
+    }
+    .subtext {
+      text-align: center;
+      font-size: 0.9rem;
+      color: #555;
+      margin-bottom: 20px;
+    }
+    .subtext a {
+      color: #003366;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    .social-btn.apple {
+      width: 100%;
+      padding: 12px;
+      background: #000;
+      color: #fff;
+      border: none;
+      border-radius: 4px;
+      font-size: 0.9rem;
+      cursor: pointer;
+      margin-bottom: 20px;
+    }
+    .divider {
+      position: relative;
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    .divider span {
+      background: #fff;
+      padding: 0 10px;
+      color: #666;
+      font-size: 0.9rem;
+    }
+    .divider::before {
+      content: '';
+      position: absolute;
+      top: 50%;
+      left: 0;
+      right: 0;
+      height: 1px;
+      background: #ccc;
+      transform: translateY(-50%);
+    }
+    .form-group {
+      margin-bottom: 16px;
+    }
+    .form-group label {
+      display: block;
+      margin-bottom: 6px;
+      font-weight: bold;
+      color: #333;
+      font-size: 0.9rem;
+    }
+    .form-group input[type="email"],
+    .form-group input[type="text"],
+    .form-group input[type="password"] {
+      width: 100%;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      font-size: 0.9rem;
+    }
+    .checkbox-group {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      margin-bottom: 12px;
+    }
+    .forgot-link {
+      display: block;
+      text-align: right;
+      font-size: 0.85rem;
+      color: #007bff;
+      text-decoration: none;
+      margin-bottom: 12px;
+    }
+    .required-note {
+      font-size: 0.8rem;
+      color: #777;
+      margin-bottom: 20px;
+    }
+    .actions-row {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    .btn-link {
+      background: none;
+      border: none;
+      color: #007bff;
+      text-decoration: underline;
+      cursor: pointer;
+      font-size: 0.9rem;
+    }
+    .btn-submit {
+      padding: 10px 20px;
+      background: #003366;
+      color: #fff;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      font-size: 0.9rem;
+    }
+    .info-message {
+      margin-top: 24px;
+      padding: 12px;
+      background: #e0f7fa;
+      color: #00796b;
+      border: 1px solid #00796b;
+      border-radius: 4px;
+      font-size: 0.9rem;
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
-  <div class="container">
-    <h2>Register</h2>
-    <!-- …social buttons… -->
+  <div class="register-container">
+    <h1>Register</h1>
+    <p class="subtext">
+      By continuing you agree to our
+      <a href="#">Community Guidelines</a>
+    </p>
+
+    <button id="appleBtn" class="social-btn apple">
+      <i class="fab fa-apple"></i> CONTINUE WITH APPLE
+    </button>
+
+    <div class="divider"><span>or</span></div>
 
     <form id="registerForm">
-      <label for="email">Email Address<span>*</span></label>
-      <input type="email" id="email" required>
+      <div class="form-group">
+        <label for="email">Email Address <span>*</span></label>
+        <input type="email" id="email" required />
+      </div>
 
-      <label for="username">Username<span>*</span></label>
-      <input type="text" id="username" required>
+      <div class="form-group">
+        <label for="username">Username <span>*</span></label>
+        <input type="text" id="username" required />
+      </div>
 
-      <label for="password">Password<span>*</span></label>
-      <input type="password" id="password" required>
+      <div class="form-group">
+        <label for="password">Password <span>*</span></label>
+        <input type="password" id="password" required />
+      </div>
 
-      <!-- …other fields… -->
+      <div class="checkbox-group">
+        <input type="checkbox" id="staySignedIn" />
+        <label for="staySignedIn">Stay signed in</label>
+      </div>
+
+      <a href="forgot-password.html" class="forgot-link">Forgot Password?</a>
+
+      <p class="required-note">* indicates a required field</p>
 
       <div class="actions-row">
-        <button type="button" class="join-btn"
-                onclick="window.location.href='login.html'">
+        <button
+          type="button"
+          class="btn-link"
+          onclick="window.location.href='login.html'">
           Already have an account? Log In
         </button>
-        <button type="submit" class="login-btn">REGISTER</button>
+        <button type="submit" class="btn-submit">REGISTER</button>
       </div>
     </form>
+
+    <div id="message" class="info-message" style="display:none;"></div>
   </div>
 
-  <!-- Firebase + Registration Logic -->
   <script>
-    // 1. Your Firebase config
+    // Initialize Firebase
     const firebaseConfig = {
       apiKey: "AIzaSyCRhKq7k4v2MdiE5xT4H7-Yb7SLQ5mvTn8",
       authDomain: "quiz-app-1b48b.firebaseapp.com",
       projectId: "quiz-app-1b48b",
-      // …other keys…
+      storageBucket: "quiz-app-1b48b.appspot.com",
+      messagingSenderId: "765334603137",
+      appId: "1:765334603137:web:1c8a13f6086a6773c2d480",
+      measurementId: "G-YQJQWJ12N7"
     };
-    // 2. Initialize Firebase
     firebase.initializeApp(firebaseConfig);
     const auth = firebase.auth();
 
-    // 3. Hook up your registration form
+    // Handle registration
     document.getElementById('registerForm')
-      .addEventListener('submit', async function(e) {
+      .addEventListener('submit', async (e) => {
         e.preventDefault();
+        const form = e.target;
+        const email    = form.email.value.trim();
+        const username = form.username.value.trim();
+        const password = form.password.value;
 
-        // Collect form values
-        const email    = document.getElementById('email').value;
-        const password = document.getElementById('password').value;
-        const username = document.getElementById('username').value;
+        // disable inputs during processing
+        form.querySelectorAll('input, button').forEach(el => el.disabled = true);
 
         try {
-          // 4. Create user with email & password
-          const userCred = await auth
-            .createUserWithEmailAndPassword(email, password);
+          // 1. Create account
+          const { user } = await auth.createUserWithEmailAndPassword(email, password);
 
-          // 5. Optional: save extra profile data (username) in Firestore/Database here
+          // (Optional) Save `username` in your database here
 
-          // 6. Send verification email
-          await userCred.user.sendEmailVerification({
-            // You can omit this object or customize action URL
-            url: 'https://your-domain.com/login.html'
+          // 2. Send verification email
+          await user.sendEmailVerification({
+            url: window.location.origin + '/login.html'
           });
 
-          // 7. Notify user and redirect to login
-          alert(`A verification link has been sent to ${email}. Please check your inbox.`);
-          window.location.href = 'login.html';
+          // 3. Show confirmation message
+          const msg = document.getElementById('message');
+          msg.textContent = `A verification link has been sent to ${email}. Please check your inbox to activate your account.`;
+          msg.style.display = 'block';
 
+          // clear form
+          form.reset();
         } catch (err) {
-          // 8. Handle errors (show on page or alert)
-          console.error(err);
           alert(err.message);
+          form.querySelectorAll('input, button').forEach(el => el.disabled = false);
         }
       });
   </script>
