--- a/index.html
+++ b/index.html
@@ -18,19 +18,26 @@
   <!-- Injected header -->
   <div id="include-header"></div>
 
+  <!-- No-JS fallback -->
+  <noscript>
+    <div class="error" style="background:#ffe0e0;color:#b00;padding:1em;margin:1em 0;">
+      This quiz app requires JavaScript to function properly.
+    </div>
+  </noscript>
+
   <!-- Quiz App -->
   <div class="app">
     <h1>Indian Railway Manuals Quiz</h1>
     <div class="quiz-list" id="quizList">
-      <button class="manual-btn" data-manual="irwm">1. Indian Railway Works Manual</button>
-      <button class="manual-btn" data-manual="irpwm">2. Indian Railway P-way Manual</button>
-      <button class="manual-btn" data-manual="irdim">3. Indian Railway Schedule of Dimensions</button>
-      <button class="manual-btn" data-manual="irec">4. Indian Railway Engineering Code</button>
-      <button class="manual-btn" data-manual="stm">5. Small Track Machine Manual</button>
-      <button class="manual-btn" data-manual="usfd">6. USFD Manual</button>
-      <button class="manual-btn" data-manual="fbwm">7. FBW Manual</button>
-      <button class="manual-btn" data-manual="store">8. Store Manual</button>
-      <button class="manual-btn" data-manual="account">9. Account Manual</button>
+      <button class="manual-btn" data-manual="irwm" aria-label="Start quiz for Indian Railway Works Manual">1. Indian Railway Works Manual</button>
+      <button class="manual-btn" data-manual="irpwm" aria-label="Start quiz for Indian Railway P-way Manual">2. Indian Railway P-way Manual</button>
+      <button class="manual-btn" data-manual="irdim" aria-label="Start quiz for Indian Railway Schedule of Dimensions">3. Indian Railway Schedule of Dimensions</button>
+      <button class="manual-btn" data-manual="irec" aria-label="Start quiz for Indian Railway Engineering Code">4. Indian Railway Engineering Code</button>
+      <button class="manual-btn" data-manual="stm" aria-label="Start quiz for Small Track Machine Manual">5. Small Track Machine Manual</button>
+      <button class="manual-btn" data-manual="usfd" aria-label="Start quiz for USFD Manual">6. USFD Manual</button>
+      <button class="manual-btn" data-manual="fbwm" aria-label="Start quiz for FBW Manual">7. FBW Manual</button>
+      <button class="manual-btn" data-manual="store" aria-label="Start quiz for Store Manual">8. Store Manual</button>
+      <button class="manual-btn" data-manual="account" aria-label="Start quiz for Account Manual">9. Account Manual</button>
     </div>
   </div>
 
@@ -39,10 +46,15 @@
   <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
 
   <script>
-    // 1) Load and inject header.html
+    // 1) Load and inject header.html with error handling
     async function includeHeader() {
-      const resp = await fetch('header.html');
-      document.getElementById('include-header').innerHTML = await resp.text();
+      try {
+        const resp = await fetch('header.html');
+        if (!resp.ok) throw new Error('Header not found');
+        document.getElementById('include-header').innerHTML = await resp.text();
+      } catch (e) {
+        document.getElementById('include-header').innerHTML = '<div class="error" style="background:#ffe0e0;color:#b00;padding:1em;">Header failed to load.</div>';
+      }
     }
 
     // 2) Initialize Firebase & wire everything up
@@ -58,27 +70,32 @@
         measurementId: "G-YQJQWJ12N7"
       });
 
+      // Defensive DOM access
       const logoutBtn    = document.getElementById('logoutButton');
       const loginLink    = document.getElementById('loginLink');
       const registerLink = document.getElementById('registerLink');
 
       // 3) Toggle header links on auth change
       firebase.auth().onAuthStateChanged(user => {
-        if (user) {
-          logoutBtn.style.display    = 'inline-block';
-          loginLink.style.display    = 'none';
-          registerLink.style.display = 'none';
-        } else {
-          logoutBtn.style.display    = 'none';
-          loginLink.style.display    = 'inline-block';
-          registerLink.style.display = 'inline-block';
+        if (logoutBtn && loginLink && registerLink) {
+          if (user) {
+            logoutBtn.style.display    = 'inline-block';
+            loginLink.style.display    = 'none';
+            registerLink.style.display = 'none';
+          } else {
+            logoutBtn.style.display    = 'none';
+            loginLink.style.display    = 'inline-block';
+            registerLink.style.display = 'inline-block';
+          }
         }
       });
 
       // 4) Logout handler
-      logoutBtn.addEventListener('click', () =>
-        firebase.auth().signOut().then(() => location.reload())
-      );
+      if (logoutBtn) {
+        logoutBtn.addEventListener('click', () =>
+          firebase.auth().signOut().then(() => location.reload())
+        );
+      }
 
       // 5) Quiz button click → check real‐time auth then redirect
       document.querySelectorAll('.manual-btn').forEach(btn => {
@@ -87,7 +104,8 @@
           if (user) {
             window.location.href = `quiz.html?manual=${btn.dataset.manual}`;
           } else {
-            window.location.href = 'login.html';
+            // Pass redirect info for smoother UX after login
+            window.location.href = `login.html?redirect=quiz&manual=${btn.dataset.manual}`;
           }
         });
       });
