--- a/quiz.html
+++ b/quiz.html
@@ -3,12 +3,41 @@
 <head>
     <title>Quiz</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+      /* You can move this to style.css */
+      .back-dashboard-btn {
+        display: inline-block;
+        margin-left: 16px;
+        padding: 6px 16px;
+        background: #1976d2;
+        color: #fff;
+        border-radius: 4px;
+        text-decoration: none;
+        font-weight: bold;
+        font-size: 1em;
+        transition: background 0.2s;
+      }
+      .back-dashboard-btn:hover {
+        background: #1565c0;
+      }
+      .home-link {
+        margin-left: 16px;
+        font-size: 1em;
+        text-decoration: none;
+        color: #1976d2;
+        font-weight: bold;
+      }
+      .home-link:hover {
+        text-decoration: underline;
+      }
+    </style>
 </head>
 <body>
     <div class="app">
         <h1>
             Quiz
-            <a href="index.html">Home</a>
+            <a href="index.html" class="home-link">Home</a>
+            <a href="dashboard.html" class="back-dashboard-btn" aria-label="Return to Dashboard">&larr; Dashboard</a>
         </h1>
         <div class="quiz">
             <h2 id="question">Question goes here</h2>
