--- a/quiz.html
+++ b/quiz.html
@@ -4,7 +4,6 @@
     <title>Quiz</title>
     <link rel="stylesheet" href="style.css">
     <style>
-      /* You can move this to style.css */
       .back-dashboard-btn {
         display: inline-block;
         margin-left: 16px;
@@ -30,14 +29,21 @@
       .home-link:hover {
         text-decoration: underline;
       }
+      #loading {
+        text-align: center;
+        padding: 40px 0;
+        font-size: 1.2em;
+        color: #888;
+      }
     </style>
 </head>
 <body>
-    <div class="app">
+    <div id="loading">Checking authentication...</div>
+    <div class="app" style="display:none;">
         <h1>
             Quiz
             <a href="index.html" class="home-link">Home</a>
-            <a href="dashboard.html" class="back-dashboard-btn" aria-label="Return to Dashboard">&larr; Dashboard</a>
+            <a href="#" class="back-dashboard-btn" id="backToDashboardBtn" aria-label="Return to Dashboard">&larr; Dashboard</a>
         </h1>
         <div class="quiz">
             <h2 id="question">Question goes here</h2>
@@ -45,10 +51,9 @@
             <button id="next-btn">Next</button>
         </div>
     </div>
-    <!-- Firebase SDKs: Place these before your main JS -->
+    <!-- Firebase SDKs -->
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js"></script>
-    <!-- Your Firebase config -->
     <script>
       // Replace with your actual config
       const firebaseConfig = {
@@ -62,8 +67,13 @@
       // Auth check: block access if not logged in
       firebase.auth().onAuthStateChanged((user) => {
         if (!user) {
-          alert('You must log in to access this quiz.');
-          window.location.href = 'login.html';
+          // Redirect to login with return url
+          const returnUrl = encodeURIComponent(window.location.href);
+          window.location.href = `login.html?redirect=${returnUrl}`;
+        } else {
+          // Show quiz content
+          document.getElementById('loading').style.display = 'none';
+          document.querySelector('.app').style.display = 'block';
         }
       });
     </script>
