--- a/login.html
+++ b/login.html
@@ -77,6 +77,11 @@
   </style>
 </head>
 <body>
+  <noscript>
+    <div style="color:#b00; background:#ffe0e0; padding:1em; text-align:center;">
+      This page requires JavaScript to function. Please enable JavaScript in your browser.
+    </div>
+  </noscript>
   <div class="login-container">
     <h2>Login to Quiz App</h2>
     <div id="error-message" class="error-message"></div>
@@ -91,30 +96,48 @@
       Don't have an account? <a href="register.html">Sign up</a>
     </div>
   </div>
+  <!-- Firebase SDKs -->
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js"></script>
   <script>
-    // Demo login: accepts any email/password, stores in localStorage
+    // Replace with your actual config
+    const firebaseConfig = {
+      apiKey: "AIzaSyCRhKq7k4v2MdiE5xT4H7-Yb7SLQ5mvTn8",
+      authDomain: "quiz-app-1b48b.firebaseapp.com",
+      projectId: "quiz-app-1b48b",
+      // ...other config values
+    };
+    firebase.initializeApp(firebaseConfig);
+    const auth = firebase.auth();
+
     document.getElementById('loginForm').addEventListener('submit', function(e) {
       e.preventDefault();
       const email = document.getElementById('email').value.trim();
       const password = document.getElementById('password').value.trim();
       const errorDiv = document.getElementById('error-message');
+      errorDiv.style.display = "none";
 
-      // Simple validation
       if (!email || !password) {
         errorDiv.textContent = "Please enter both email and password.";
         errorDiv.style.display = "block";
         return;
       }
 
-      // In real app: verify credentials with backend or Firebase Auth here
-      // For demo, just store username/email in localStorage
-      localStorage.setItem('username', email.split('@')[0]);
-      localStorage.setItem('email', email);
-
-      // Handle redirect
-      const urlParams = new URLSearchParams(window.location.search);
-      const redirect = urlParams.get('redirect');
-      window.location.href = redirect || 'dashboard.html';
+      auth.signInWithEmailAndPassword(email, password)
+        .then(() => {
+          // Handle redirect
+          const urlParams = new URLSearchParams(window.location.search);
+          const redirect = urlParams.get('redirect');
+          window.location.href = redirect || 'dashboard.html';
+        })
+        .catch(error => {
+          let msg = "Login failed. Please try again.";
+          if (error.code === 'auth/user-not-found') msg = "No user found with this email.";
+          else if (error.code === 'auth/wrong-password') msg = "Incorrect password.";
+          else if (error.code === 'auth/invalid-email') msg = "Invalid email address.";
+          errorDiv.textContent = msg;
+          errorDiv.style.display = "block";
+        });
     });
   </script>
 </body>
